<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.pokedex.viewmodel.PokemonSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.PokemonSearchFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/who_is_this_pokemon"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="250sp"
                android:layout_height="250sp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/optionButton1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/avatars"/>

        <Button
            android:id="@+id/optionButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            tools:text="Option 1"
            app:layout_constraintBottom_toTopOf="@+id/optionButton3"
            app:layout_constraintEnd_toStartOf="@+id/optionButton2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/optionButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            tools:text="Option 2"
            app:layout_constraintBottom_toBottomOf="@+id/optionButton1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/optionButton1"
            app:layout_constraintTop_toTopOf="@+id/optionButton1" />

        <Button
            android:id="@+id/optionButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            tools:text="Option 3"
            app:layout_constraintBottom_toTopOf="@+id/captureButton"
            app:layout_constraintEnd_toStartOf="@+id/optionButton4"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/optionButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            tools:text="Option 4"
            app:layout_constraintBottom_toBottomOf="@+id/optionButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/optionButton3"
            app:layout_constraintTop_toTopOf="@+id/optionButton3" />

        <Button
            android:id="@+id/captureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/capture_pokemon_button"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>